--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>git demo - trying to change the title</title>
 </head>
 <body>
+    <h1> Git Demo </h1>
+        
+       <p>
+           This is so Exciting !!
+        </p>
     
+    <footer> <p>The footer of Git Demo is here </p> </footer>
 </body>
 </html>
