--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git demo - trying to change the title</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <h1> Git Demo </h1>
